compiler/testData/cli/jvm/noStdlib.out
compiler/testData/cli/jvm/noStdlib.kt:1:8: error: unresolved reference: kotlin
import kotlin.reflect.*
       ^
compiler/testData/cli/jvm/noStdlib.kt:4:19: error: unresolved reference: primaryConstructor
    String::class.primaryConstructor
                  ^
compiler/testData/cli/jvm/noStdlib.kt:6:11: error: unresolved reference: isExternal
    ::foo.isExternal
          ^
compiler/testData/cli/jvm/noStdlib.kt:7:5: error: unresolved reference: listOf
    listOf(42)
    ^
COMPILATION_ERROR
